# spacex-graphql-rust

./: Cargo.toml  Procfile  README.md
querystring_macro/: Cargo.toml
querystring_macro/src/: lib.rs
src/: lib.rs  main.rs
src/api/: base_types.rs  mod.rs  query_types.rs
src/schema/: mod.rs  types.rs
src/schema/base_types/: capsule.rs  core.rs  dragon.rs  history.rs  info.rs  landingpad.rs  launch.rs  launchpad.rs  mission.rs  mod.rs  payload.rs  roadster.rs  rocket.rs  ship.rs
src/schema/common/: mod.rs  ordering.rs
src/schema/query/: context.rs  mod.rs  query_impl.rs
src/schema/query_types/: capsule_query_options.rs  core_query_options.rs  date_filter.rs  empty.rs  history_query_options.rs  launch_query_options.rs  launchpad_query_options.rs  mod.rs  output_control_options.rs  payload_query_options.rs  ship_query_options.rs
src/schema/utils/: build_querystring.rs  mod.rs
src/spacex_api/: mod.rs
tests/: test.rs
