[package]
name = "spacex-api-rust-graphql"
version = "0.1.0"
authors = ["aaron.feigenbaum <aaron@enervee.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.13.1"
reqwest = "0.9.20"
serde = "1.0"
serde_json = "1.0"
actix-web = "1.0.0"
actix-cors = "0.1.0"
futures = "0.1"
log = "0.4"
pretty_env_logger = "0.3.1"